manifests/monitoring/ingress-grafana.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`grafana.cowlab.org`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: grafana
      port: 3000
  tls:
    secretName: cowlab-production-tls
